--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             return person.lastName;
         }
 
-        const getFirstName = (person) => {
+        function getFirstName(person) {
             return person.firstName;
         };
 
