:tada: fix sortByLastName function
	- sortByLast name was being called with
	firstName as the argument of sortObjListByProp.
	Change firstName to lastName and remove the
	reverse() method

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
         const sortByFirstName = sortObjListByProp('firstName');
 
-        const sortByLastName = (personList) => sortByFirstName(personList).reverse();
+        const sortByLastName = sortObjListByProp('lastName');
 
 
         /*==================================================
